_config.yml: updated color_scheme

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ collections:
   posts:
     permalink: '/posts/:title/'
 description: A portfolio theme with a blog
-color_scheme: light
+color_scheme: dark
 accent_color: pink
 header:
   title: Exto
